@@ -1,5 +1,5 @@
 /*-
- * Copyright (c) 1999 Matt Armstrong
+ * Copyright (c) 1999-2000 Matt Armstrong
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -24,7 +24,7 @@
  * SUCH DAMAGE.
  */
 
-This is flipit version 0.3.1, a program for controlling X10 devices
+This is flipit version 0.3.2, a program for controlling X10 devices
 via a cm17a "Firecracker" from X10 Ltd.
 
 I can be reached at Matt Armstrong <matt@lickey.com>.
