@@ -1,5 +1,5 @@
 /*-
- * Copyright (c) 1999 Matt Armstrong
+ * Copyright (c) 1999-2000 Matt Armstrong
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -24,7 +24,7 @@
  * SUCH DAMAGE.
  */
 AC_INIT(cm17a.c)
-AM_INIT_AUTOMAKE(flipit, 0.3.1)
+AM_INIT_AUTOMAKE(flipit, 0.3.2)
 
 if test x"$missing_dir" = x; then
 	echo "Whoopse, AM_INIT_AUTOMAKE used to set $missing_dir"
@@ -39,6 +39,6 @@ AM_MAINTAINER_MODE
 AC_PROG_CC
 
 AC_STDC_HEADERS
-AC_HAVE_HEADERS(fcntl.h sys/ioctl.h sys/time.h sys/types.h unistd.h)
+AC_HAVE_HEADERS(fcntl.h sys/ioctl.h sys/time.h sys/types.h unistd.h termio.h)
 
 AC_OUTPUT([Makefile flipit.pod])
