@@ -93,7 +93,7 @@
 .nr % 0
 .rr F
 .\}
-.TH FLIPIT 1 "flipit version 0.3.1" "8/Jul/2000" "flipit 0.3.1"
+.TH FLIPIT 1 "flipit version 0.3.2" "14/Oct/2000" "flipit 0.3.2"
 .UC
 .if n .hy 0
 .if n .na
@@ -195,7 +195,7 @@ flipit \- control the X10 Firecracker (CM17A)
 \& flipit [-h] [-t tty] [COMMAND ARGS] [COMMAND ARGS]...
 .Ve
 .SH "DESCRIPTION"
-This document describes flipit version 0.3.1.
+This document describes flipit version 0.3.2.
 .PP
 Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number CM17A) plugged into a serial
