@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.13 1999/01/05 03:18:55 bje Exp $
+# $Id: mkinstalldirs 1.1 Sat, 08 Jul 2000 12:53:32 -0700 matt $
 
 errstatus=0
 
