@@ -1,3 +1,9 @@
+User visible changes for flipit version 0.3.2, Oct 14, 2000:
+
+	Correct missing #include <termio.h> for Solaris and include
+	solaris.txt for a detailed distribution of a bug/problem you
+	may see on Solaris.
+
 User visible changes for flipit version 0.3.1, May 27, 2000:
 
 	Correct detection of Perl 5.6's pod2man.
